# meteor

./: .gitignore  README.md  WARP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cache/: weather.tle
configs/: config.example.yaml
meteor_auto/: __main__.py  cli.py  config.py  predict.py  runner.py  scheduler.py  tle.py  utils.py
scripts/: meteor_auto.py  run_meteor_auto.py  streamlit_app.py
scripts/.cache/: weather.tle
scripts/configs/: config.yaml
systemd/: meteor-auto.service
tests/: test_config.py  test_predict.py  test_tle.py
